# JA-Actuator_SDK

./: .gitignore  CMakeLists.txt  README.md  command_test.cc
STR_SDK-master/python/: setup.py
c++/: library.properties
c++/example/dxl_monitor/: dxl_monitor.cpp
c++/example/protocol_combined/: protocol_combined.cpp
c++/include/dynamixel_sdk/: dynamixel_sdk.h  group_bulk_read.h  group_bulk_write.h  group_fast_bulk_read.h  group_fast_sync_read.h  group_fast_sync_write.h  group_handler.h  group_sync_read.h  group_sync_write.h  packet_handler.h  port_handler.h  port_handler_arduino.h  port_handler_linux.h  port_handler_mac.h  port_handler_windows.h  protocol1_packet_handler.h  protocol2_packet_handler.h
c++/src/: DynamixelSDK.h
c++/src/dynamixel_sdk/: group_bulk_read.cpp  group_bulk_write.cpp  group_fast_bulk_read.cpp  group_fast_sync_read.cpp  group_fast_sync_write.cpp  group_handler.cpp  group_sync_read.cpp  group_sync_write.cpp  packet_handler.cpp  port_handler.cpp  port_handler_arduino.cpp  port_handler_linux.cpp  port_handler_mac.cpp  port_handler_windows.cpp  protocol1_packet_handler.cpp  protocol2_packet_handler.cpp
protocol/: setup.py
protocol/gonn/: xie.py
protocol/motor_control/: demo.py
protocol/src/bao.egg-info/: PKG-INFO  SOURCES.txt  (+2 more)
python/test/: xie.py
python/tests/: AGINT_TEST.py  Change_ID.py  Change_PWM.py  Factory_settings.py  Mechanical_zero_position.py  PCB position adjustment.py  PCB_position_adjustment.py  Testing_Aging.py  change_pid.py  crc.py  demo.py  new_mechanical_zero_position.py  position_memory.py  read_test.py
(+233 files in other folders)
